Spec: “amends” → “augments” to match Ecma262 language

--- a/spec.html
+++ b/spec.html
@@ -77,7 +77,7 @@ contributors: J. S. Choi
 <h1>Environment Records</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-environment-records>original Environment Records clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-environment-records>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-environment-records>original Environment Records clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-environment-records>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
 
 <emu-table id=table-15 caption="Abstract Methods of Environment Records">
@@ -109,7 +109,7 @@ Purpose
 <h1>Declarative Environment Records</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-declarative-environment-records>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-declarative-environment-records>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
 
 <p>Each declarative Environment Record is associated with an ECMAScript program scope containing variable, constant, let, class, module, import, and/or function declarations. A declarative Environment Record binds the set of identifiers defined by the declarations contained within its scope.</p>
@@ -273,7 +273,7 @@ Establish the immutable topic binding of this Environment Record and set the top
 <h1>Punctuators</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-punctuators>original Punctuators clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-punctuators>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-punctuators>original Punctuators clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-punctuators>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
 
 <ins class=block>
@@ -300,7 +300,7 @@ Punctuator :: one of
 <h1>Primary Expression</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-primary-expression>original Primary Expression clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-primary-expression>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-primary-expression>original Primary Expression clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-primary-expression>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
 
 <h2>Syntax</h2>
@@ -599,7 +599,7 @@ PipelineStep : PipelineBareFunction
 <h1>Assignment Operators</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-assignment-operators>original Assignment Operators clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-pf-assignment-operators>further modifications by Additional Feature PF</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-assignment-operators>original Assignment Operators clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-pf-assignment-operators>further modifications by Additional Feature PF</emu-xref>.</p>
 </emu-note>
 
 <h2>Syntax</h2>
@@ -625,7 +625,7 @@ AssignmentExpression[In, Yield, Await] :
 <h1>Iteration Statements</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-iteration-statements-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-iteration-statements-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
 </emu-note>
 
 <emu-clause id=sec-iteration-statements-static-semantics-early-errors>
@@ -667,7 +667,7 @@ IterationStatement :
 <h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-with-statement-static-semantics-early-errors>original `with` Statement, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>. It is not planned to be removed by other additional syntax.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-with-statement-static-semantics-early-errors>original `with` Statement, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>. It is not planned to be removed by other additional syntax.</p>
 </emu-note>
 
 <emu-grammar>WithStatement : `with` `(` Expression `)` Statement</emu-grammar>
@@ -693,7 +693,7 @@ IterationStatement :
 <h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-try-statement-static-semantics-early-errors>original `try` Statement, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-try-statement-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-try-statement-static-semantics-early-errors>original `try` Statement, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-try-statement-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
 </emu-note>
 
 <emu-grammar>
@@ -727,7 +727,7 @@ Catch : `catch` `(` CatchParameter `)` Block
 <h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-function-definitions-static-semantics-early-errors>original Function Definitions, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-function-definitions-static-semantics-early-errors>original Function Definitions, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
 
 <emu-grammar>FunctionBody : FunctionStatementList</emu-grammar>
@@ -756,7 +756,7 @@ Catch : `catch` `(` CatchParameter `)` Block
 <emu-see-also-para op="Contains"></emu-see-also-para>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-arrow-function-definitions-static-semantics-contains>original Arrow Functions, Static Semantics: Contains clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-arrow-function-definitions-static-semantics-contains>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-arrow-function-definitions-static-semantics-contains>original Arrow Functions, Static Semantics: Contains clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-arrow-function-definitions-static-semantics-contains>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
 
 <emu-grammar>ArrowFunction : ArrowParameters `=&gt;` ConciseBody</emu-grammar>
@@ -784,7 +784,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 <h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Scripts, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>. It is not planned to be removed by other additional syntax.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Scripts, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>. It is not planned to be removed by other additional syntax.</p>
 </emu-note>
 
 <emu-grammar>ScriptBody : StatementList</emu-grammar>
@@ -810,7 +810,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 <h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Modules, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>. It is not planned to be removed by other additional syntax.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Modules, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-function-definitions-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref>. It is not planned to be removed by other additional syntax.</p>
 </emu-note>
 
 <emu-grammar>ModuleItem : StatementListItem</emu-grammar>
@@ -834,7 +834,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 <emu-annex id=sec-additional-feature-bc>
 <h1>Additional Feature BC: Bare Constructor Calls</h1>
 <p><strong>Not at Stage 0.</strong></p>
-<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>bare constructor calls</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>bare-style pipeline form</strong>, in which a |SimpleReference| is prepended with an `new`.</p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>bare constructor calls</strong>. It augments the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>bare-style pipeline form</strong>, in which a |SimpleReference| is prepended with an `new`.</p>
 
 <p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-bc>explainer document, § Motivation, Additional Feature BC</a> for information on this feature's motivation.</p>
 
@@ -942,7 +942,7 @@ PipelineStep :
 <emu-annex id=sec-additional-feature-ba>
 <h1>Additional Feature BA: Bare Awaited Calls</h1>
 <p><strong>Not at Stage 0.</strong></p>
-<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>bare awaited function calls</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>bare-style pipeline form</strong>, in which a |SimpleReference| is prepended with an `await`.</p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>bare awaited function calls</strong>. It augments the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>bare-style pipeline form</strong>, in which a |SimpleReference| is prepended with an `await`.</p>
 
 <p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-ba>explainer document, § Motivation, Additional Feature BA</a> for information on this feature's motivation.</p>
 
@@ -1021,7 +1021,7 @@ PipelineStep :
 <emu-annex id=sec-additional-feature-bp>
 <h1>Additional Feature BP: Block Pipelines</h1>
 <p><strong>Not at Stage 0.</strong></p>
-<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>pipeline functions</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>topic-style pipeline form</strong>: a |Block|.</p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>pipeline functions</strong>. It augments the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>topic-style pipeline form</strong>: a |Block|.</p>
 
 <p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-bp>explainer document, § Motivation, Additional Feature BP</a> for information on this feature's motivation.</p>
 
@@ -1107,7 +1107,7 @@ PipelineTopicBlock[In, Yield, Await] :
 <emu-annex id=sec-additional-feature-pf>
 <h1>Additional Feature PF: Pipeline Functions</h1>
 <p><strong>Not at Stage 0.</strong></p>
-<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>pipeline functions</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>pipeline-function operator</strong> `+&gt;`. This new <strong>unary</strong> operator creates arrow functions with an implicit parameter inputted into a pipeline. The operator brings much power: it enables terse <strong>method extraction</strong>, terse <strong>partial application</strong> of functions/expressions (into unary functions), and terse <strong>composition</strong> of functions/expressions.</p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>pipeline functions</strong>. It augments the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>pipeline-function operator</strong> `+&gt;`. This new <strong>unary</strong> operator creates arrow functions with an implicit parameter inputted into a pipeline. The operator brings much power: it enables terse <strong>method extraction</strong>, terse <strong>partial application</strong> of functions/expressions (into unary functions), and terse <strong>composition</strong> of functions/expressions.</p>
 
 <p>TODO: <strong>This annex is unfinished.</strong> Need to update to right associativity. Async pipeline functions are yet to be added. Need to make bare-style pipeline functions variadic.</p>
 
@@ -1437,7 +1437,7 @@ Pipeline :
 <emu-annex id=sec-additional-feature-np>
 <h1>Additional Feature NP: N-ary Pipelines</h1>
 <p><strong>Not at Stage 0.</strong></p>
-<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>n-ary smart pipelines</strong> and <strong>multiple lexical topics</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing n-ary pipeline forms `inputList |> …` and `… |> stepList |> …`, an additional secondary topic reference `##`, a tertiary topic reference `###`, a |RestTopicReference| `...`, and an argument-List syntax to bind the new references [TODO: xref]. When combined with the <emu-xref href=#sec-additional-feature-pf>additional feature PF</emu-xref>, the resulting additional feature PF+NP enables <strong>partial application</strong> of functions/expressions into n-ary functions. [TODO: xref with PF+NP]</p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>n-ary smart pipelines</strong> and <strong>multiple lexical topics</strong>. It augments the <emu-xref href=#introduction>core proposal</emu-xref> by introducing n-ary pipeline forms `inputList |> …` and `… |> stepList |> …`, an additional secondary topic reference `##`, a tertiary topic reference `###`, a |RestTopicReference| `...`, and an argument-List syntax to bind the new references [TODO: xref]. When combined with the <emu-xref href=#sec-additional-feature-pf>additional feature PF</emu-xref>, the resulting additional feature PF+NP enables <strong>partial application</strong> of functions/expressions into n-ary functions. [TODO: xref with PF+NP]</p>
 
 <p><strong>This annex is unfinished.</strong></p>
 
@@ -2028,7 +2028,7 @@ ArgumentList[Yield, Await] :
 <emu-grammar>ArgumentList : `...` AssignmentExpression</emu-grammar>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-argument-lists-runtime-semantics-argumentlistevaluation>original ArgumentListEvaluation clause</a>.</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-argument-lists-runtime-semantics-argumentlistevaluation>original ArgumentListEvaluation clause</a>.</p>
 </emu-note>
 
 <emu-alg>
