--- a/spec.html
+++ b/spec.html
@@ -2097,6 +2097,7 @@ PipeExpression[In, Yield, Await] :
   <ins class=block>
   [lookahead &lt;! {`(`}] ConditionalExpression[?In, ?Yield, ?Await] `|&gt;` Pipeline[?In, ?Yield, ?Await]
   Arguments[?Yield, ?Await] `|&gt;` Pipeline[?In, ?Yield, ?Await]
+  `...` AssignmentExpression[+In, ?Yield, ?Await] `|&gt;` Pipeline[?In, ?Yield, ?Await]
   </ins>
 
 Pipeline[In, Yield, Await] :
