Spec: Change “appends to” to “augments” to match Ecma262 language

--- a/spec.html
+++ b/spec.html
@@ -917,7 +917,7 @@ PipelineStep :
 <p>With parameter _inputValues_.</p>
 
 <emu-note type=editor>
-<p>This section appends to the <emu-xref href=#sec-pipe-operator-runtime-semantics-pipelineevaluation>new clause in the core proposal</emu-xref>.</p>
+<p>This section augments the <emu-xref href=#sec-pipe-operator-runtime-semantics-pipelineevaluation>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
 
 <ins class=block>
@@ -990,7 +990,7 @@ PipelineStep :
 <p>With parameter _inputValues_.</p>
 
 <emu-note type=editor>
-<p>This section appends to the <emu-xref href=#sec-pipe-operator-runtime-semantics-pipelineevaluation>new clause in the core proposal</emu-xref>.</p>
+<p>This section augments the <emu-xref href=#sec-pipe-operator-runtime-semantics-pipelineevaluation>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
 
 <ins class=block>
@@ -1049,7 +1049,7 @@ PipelineTopicBlock[In, Yield, Await] :
 <emu-annex id=sec-additional-feature-bp-pipe-operator-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
 <emu-note type=editor>
-<p>This section appends to the <emu-xref href=#sec-pipe-operator-static-semantics-early-errors>new clause in the core proposal</emu-xref>.</p>
+<p>This section augments the <emu-xref href=#sec-pipe-operator-static-semantics-early-errors>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
 
 <ins class=block>
@@ -1065,7 +1065,7 @@ PipelineTopicBlock[In, Yield, Await] :
 <p>With parameter _symbol_.</p>
 <emu-see-also-para op="Contains"></emu-see-also-para>
 <emu-note type=editor>
-<p>This section appends to the <emu-xref href=#sec-pipe-operator-static-semantics-contains>new clause in the core proposal</emu-xref>.</p>
+<p>This section augments the <emu-xref href=#sec-pipe-operator-static-semantics-contains>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
 
 <emu-grammar>PipelineTopicExpression : ConditionalExpression</emu-grammar>
@@ -2188,7 +2188,7 @@ PipelineStep[In, Yield, Await] :
 <p>With parameter _inputValues_.</p>
 
 <emu-note type=editor>
-<p>This section appends to the <emu-xref href=#sec-pipe-operator-runtime-semantics-pipelineevaluation>new clause in the core proposal</emu-xref>.</p>
+<p>This section augments the <emu-xref href=#sec-pipe-operator-runtime-semantics-pipelineevaluation>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
 
 <ins class=block>
