--- a/spec.html
+++ b/spec.html
@@ -571,8 +571,8 @@ PipelineStep : PipelineBareFunction
 
 <emu-grammar>Pipeline : PipelineStep `|&gt;` Pipeline</emu-grammar>
 <emu-alg>
-1. Let _stepOutputValues_ be PipelineEvaluation of |PipelineStep| with argument _inputValues_.
-2. Let _pipelineRemainderOutputRef_ be PipelineEvaluation of |Pipeline| with argument _stepOutputValues_.
+1. Let _stepOutputValues_ be ? PipelineEvaluation of |PipelineStep| with argument _inputValues_.
+2. Let _pipelineRemainderOutputRef_ be ? PipelineEvaluation of |Pipeline| with argument _stepOutputValues_.
 3. Return ? GetValue(_pipelineRemainderOutputRef_).
 </emu-alg>
 
@@ -585,7 +585,7 @@ PipelineStep : PipelineBareFunction
 <emu-alg>
 1. Let _inputRef_ be the result of evaluating _ConditionalExpression_.
 2. Let _inputValues_ be a List containing the one element which is the result of ? GetValue(_inputRef_).
-3. Let _pipelineOutputRef_ be PipelineEvaluation of _Pipeline_ with argument _inputValues_.
+3. Let _pipelineOutputRef_ be ? PipelineEvaluation of _Pipeline_ with argument _inputValues_.
 4. Let _pipelineOutputValues_ be ? GetValue(_pipelineOutputRef_).
 5. Assert: _pipelineOutputValues_ is a List containing one element.
 6. Return _pipelineOutputValues_[0].
@@ -1406,7 +1406,7 @@ Pipeline :
 </emu-grammar>
 <emu-alg>
 1. Perform ? FunctionDeclarationInstantiation(_functionObject_, _argumentsList_).
-2. Let _exprRef_ be PipelineEvaluation of |Pipeline| with argument _argumentsList_.
+2. Let _exprRef_ be ? PipelineEvaluation of |Pipeline| with argument _argumentsList_.
 3. Let _exprValue_ be ? GetValue(_exprRef_).
 4. Return Completion{[[Type]]: ~return~, [[Value]]: _exprValue_, [[Target]]: ~empty~}.
 </emu-alg>
